Improve error handling for Missing Connectivity Proxy information