@@ -7,10 +7,8 @@ package com.sap.cloud.sdk.cloudplatform.connectivity;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 
 import com.sap.cloud.environment.servicebinding.api.DefaultServiceBindingAccessor;
 import com.sap.cloud.environment.servicebinding.api.ServiceBinding;
@@ -18,24 +16,17 @@ import com.sap.cloud.environment.servicebinding.api.ServiceBindingAccessor;
 import com.sap.cloud.environment.servicebinding.api.ServiceIdentifier;
 import com.sap.cloud.sdk.cloudplatform.connectivity.exception.DestinationAccessException;
 import com.sap.cloud.sdk.cloudplatform.connectivity.exception.DestinationNotFoundException;
+import com.sap.cloud.sdk.cloudplatform.exception.ShouldNotHappenException;
 import com.sap.cloud.sdk.cloudplatform.security.AuthTokenAccessor;
 
 import io.vavr.control.Option;
-import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
-import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @NoArgsConstructor
 class DefaultHttpDestinationBuilderProxyHandler
 {
-    @Setter( AccessLevel.PACKAGE )
-    private static ServiceBinding serviceBindingConnectivity = null;
-
-    @Setter( AccessLevel.PACKAGE )
-    private static ServiceBindingDestinationLoader serviceBindingDestinationLoader = null;
-
     /**
      * Handler to work resolve a proxied {@link DefaultHttpDestination} object.
      *
@@ -49,14 +40,17 @@ class DefaultHttpDestinationBuilderProxyHandler
         throws DestinationAccessException,
             DestinationNotFoundException
     {
+        if( !builder.get(DestinationProperty.PROXY_TYPE).contains(ProxyType.ON_PREMISE) ) {
+            throw new ShouldNotHappenException(
+                "Proxy handler was invoked for destination "
+                    + builder.get(DestinationProperty.NAME).getOrElse("unnamed-destination")
+                    + " that is not supposed to be proxied.");
+        }
         // add location id header provider, useful to identify one of multiple cloud connectors
         builder.headerProviders(new SapConnectivityLocationIdHeaderProvider());
 
         // resolve connectivity service binding, necessary for on-premise proxying
         final ServiceBinding serviceBinding = getServiceBindingConnectivity();
-        if( serviceBinding == null ) {
-            throw new DestinationAccessException("Unable to resolve connectivity service binding.");
-        }
 
         final OnBehalfOf derivedOnBehalfOf = deriveOnBehalfOf(builder);
         final DefaultHttpDestination destination = builder.buildInternal();
@@ -95,15 +89,14 @@ class DefaultHttpDestinationBuilderProxyHandler
                     .get(DestinationProperty.PRINCIPAL_PROPAGATION_MODE)
                     .getOrElse(PrincipalPropagationMode.TOKEN_FORWARDING);
 
-            switch( mode ) {
-                case TOKEN_EXCHANGE:
-                    return OnBehalfOf.NAMED_USER_CURRENT_TENANT;
-                case TOKEN_FORWARDING: // default
+            return switch (mode) {
+                case TOKEN_EXCHANGE -> OnBehalfOf.NAMED_USER_CURRENT_TENANT;
+                case TOKEN_FORWARDING -> { // default
                     builder.headerProviders(new SapConnectivityAuthenticationHeaderProvider());
-                    return OnBehalfOf.TECHNICAL_USER_CURRENT_TENANT;
-                case UNKNOWN:
-                    throw new IllegalStateException("Principal propagation mode is unknown.");
-            }
+                    yield OnBehalfOf.TECHNICAL_USER_CURRENT_TENANT;
+                }
+                case UNKNOWN -> throw new IllegalStateException("Principal propagation mode is unknown.");
+            };
         }
 
         final boolean isProvider = builder.get(DestinationProperty.TENANT_ID).filter(String::isEmpty).isDefined();
@@ -117,27 +110,26 @@ class DefaultHttpDestinationBuilderProxyHandler
      * @return The service binding representing Connectivity Service. Or {@code null} if no service binding could be
      *         found.
      */
-    @Nullable
-    private ServiceBinding getServiceBindingConnectivity()
+    @Nonnull
+    ServiceBinding getServiceBindingConnectivity()
     {
-        if( serviceBindingConnectivity == null ) {
-            final ServiceBindingAccessor serviceBindingAccessor = DefaultServiceBindingAccessor.getInstance();
+        final ServiceBindingAccessor serviceBindingAccessor = DefaultServiceBindingAccessor.getInstance();
 
-            final Predicate<ServiceBinding> predicate =
-                b -> ServiceIdentifier.CONNECTIVITY.equals(b.getServiceIdentifier().orElse(null));
+        final Predicate<ServiceBinding> predicate =
+            b -> ServiceIdentifier.CONNECTIVITY.equals(b.getServiceIdentifier().orElse(null));
 
-            final List<ServiceBinding> serviceBindings =
-                serviceBindingAccessor.getServiceBindings().stream().filter(predicate).collect(Collectors.toList());
+        final List<ServiceBinding> serviceBindings =
+            serviceBindingAccessor.getServiceBindings().stream().filter(predicate).toList();
 
-            if( serviceBindings.isEmpty() ) {
-                log.debug("No service bindings found matching Connectivity.");
-            } else if( serviceBindings.size() > 1 ) {
-                log.debug("More than one service bindings found that match Connectivity.");
-            } else {
-                serviceBindingConnectivity = serviceBindings.get(0);
-            }
+        if( serviceBindings.isEmpty() ) {
+            throw new DestinationAccessException(
+                "Unable to resolve connectivity service binding. No service bindings found matching Connectivity.");
+        } else if( serviceBindings.size() > 1 ) {
+            throw new DestinationAccessException(
+                "Unable to resolve connectivity service binding. More than one service bindings found that match Connectivity.");
+        } else {
+            return serviceBindings.get(0);
         }
-        return serviceBindingConnectivity;
     }
 
     /**
@@ -146,12 +138,9 @@ class DefaultHttpDestinationBuilderProxyHandler
      * @return The loader object.
      */
     @Nonnull
-    private ServiceBindingDestinationLoader getServiceBindingDestinationLoader()
+    ServiceBindingDestinationLoader getServiceBindingDestinationLoader()
     {
-        if( serviceBindingDestinationLoader == null ) {
-            serviceBindingDestinationLoader = ServiceBindingDestinationLoader.defaultLoaderChain();
-        }
-        return serviceBindingDestinationLoader;
+        return ServiceBindingDestinationLoader.defaultLoaderChain();
     }
 
     /**
